[gd_scene load_steps=27 format=2]

[ext_resource path="res://src/screens/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Title-Big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/textures/ui/menus/background/sky.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/ui/menus/background/far-clouds.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/menus/background/far-mountains.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/menus/background/mountains.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/Default-Medium.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/textures/ui/menus/background/near-clouds.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/ui/menus/background/trees.png" type="Texture" id=9]
[ext_resource path="res://src/screens/ScrollingTexture.gdshader" type="Shader" id=10]
[ext_resource path="res://src/game/levels/LevelManager.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sound/bgm/menu.wav" type="AudioStream" id=12]
[ext_resource path="res://src/utils/AudioHandler.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sound/UI/CLICK_001.wav" type="AudioStream" id=14]
[ext_resource path="res://src/screens/DiamondTransition.gdshader" type="Shader" id=15]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Transition:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "enter"
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Transition:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "exit"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Container/Transition:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container/Transition:material:shader_param/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 0, 0 )
shader_param/scale = 2.9
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 12, 0 )
shader_param/scale = 1.5
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 25, 0 )
shader_param/scale = 1.5
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 50, 0 )
shader_param/scale = 1.5
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 100, 0 )
shader_param/scale = 1.8
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 10 )
shader_param/motion = Vector2( 200, 0 )
shader_param/scale = 2.5
shader_param/offset = Vector2( 0, 0 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 0, 0, 0, 0.4 )
shadow_size = 13

[sub_resource type="ShaderMaterial" id=11]
shader = ExtResource( 15 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[node name="MainMenu" type="Node"]
script = ExtResource( 1 )
level_manager_scene = ExtResource( 11 )

[node name="TransitionAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/enter = SubResource( 14 )
anims/exit = SubResource( 13 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -15.0
autoplay = true
bus = "BGM"

[node name="ClickSfx" parent="." instance=ExtResource( 13 )]
_audio_references = [ ExtResource( 14 ) ]
_pitch_scales = [ [ 0.9, 1.1 ] ]
bus = "UI"

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Backgrounds" type="Control" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Background1" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 9 )
anchor_right = 1.0
margin_top = -40.0
margin_bottom = 261.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="Background2" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="Background3" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="Background4" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="Background5" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="Fill" type="ColorRect" parent="Container/Backgrounds"]
anchor_top = 0.698
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -116.56
mouse_filter = 2
color = Color( 0.172549, 0.145098, 0.27451, 1 )

[node name="Background6" type="TextureRect" parent="Container/Backgrounds"]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -144.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="Title" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -245.5
margin_top = 140.0
margin_right = 245.5
margin_bottom = 221.0
grow_horizontal = 2
custom_colors/font_color = Color( 1, 0.847059, 0.447059, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Kitty Feed"
align = 1

[node name="Buttons" type="VBoxContainer" parent="Container"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = 63.0
margin_right = 216.0
margin_bottom = 212.0
mouse_filter = 2
custom_constants/separation = 25

[node name="StartButton" type="Button" parent="Container/Buttons"]
margin_right = 195.0
margin_bottom = 62.0
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Start"

[node name="ExitButton" type="Button" parent="Container/Buttons"]
margin_top = 87.0
margin_right = 195.0
margin_bottom = 149.0
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Exit"

[node name="Transition" type="ColorRect" parent="Container"]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Container/Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Container/Buttons/StartButton" to="ClickSfx" method="play"]
[connection signal="pressed" from="Container/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Container/Buttons/ExitButton" to="ClickSfx" method="play"]
